gcc/testsuite/rust/rustc/ui/issues/issue-35241.rs
struct Foo(u32);

fn test() -> Foo { Foo } // { dg-error ".E0308." "" { target *-*-* } }

fn main() {}

